# VM-Compilers-Course

./: CMakeLists.txt  LICENSE  README.md
Include/: BasicBlock.h  CheckEliminationPass.h  ConstantFoldingPass.h  ControlFlowGraph.h  Function.h  IRBuilder.h  Instruction.h  LivenessAnalyzer.h  Loop.h  LoopAnalyzer.h  Pass.h  PeepholesPass.h  RegisterAllocator.h  StaticInliningPass.h  Value.h
SampleIR/: CMakeLists.txt
SampleIR/FactLoop/: CMakeLists.txt  FactLoop.cpp  FactLoop.dot  FactLoop.vmir  IRGenFactLoop.cpp  README.md
SampleIR/FactLoop/Resources/: FactLoopDomTree.dot
SampleIR/FactRecursive/: CMakeLists.txt  FactRecursive.cpp  FactRecursive.dot  FactRecursive.vmir  IRGenFactRecursive.cpp  README.md
SampleIR/FactRecursive/Resources/: FactRecursiveDomTree.dot
Src/: CMakeLists.txt  CheckEliminationPass.cpp  ConstantFoldingPass.cpp  ControlFlowGraph.cpp  Function.cpp  IRBuilder.cpp  Instruction.cpp  LivenessAnalyzer.cpp  LoopAnalyzer.cpp  PeepholesPass.cpp  RegisterAllocator.cpp  StaticInliningPass.cpp
Test/: CMakeLists.txt
Test/CheckEliminationPass/: CMakeLists.txt  CheckEliminationPass.cpp
Test/ConstantFoldingPass/: CMakeLists.txt  ConstantFoldingPass.cpp
Test/DominatorTree/: CMakeLists.txt  DominatorTree.cpp  Example3CFG.dot  Example3DomTree.dot  README.md
Test/DominatorTree/Resources/: Example1CFG.dot  Example1DomTree.dot  Example2DomTree.dot
Test/LivenessAnalyzer/: CMakeLists.txt  LivenessAnalyzer.cpp  README.md
Test/LivenessAnalyzer/Resources/: Example1CFG.dot  Example1LoopTree.dot  Example2LoopTree.dot  Example3CFG.dot  Example3LoopTree.dot  Example5LoopTree.dot  ExampleBigCFG.dot  ExampleBigDomTree.dot  ExampleBigLoopTree.dot  FactLoopCFG.dot  FactLoopLoopTree.dot  FactRecursiveCFG.dot  LinearOrderFromLecture1CFG.dot  LinearOrderFromLecture1DomTree.dot  LinearOrderFromLecture1LoopTree.dot  LinearOrderFromLecture2CFG.dot  LinearOrderFromLecture2DomTree.dot  LivenessFromLecture1CFG.dot  LivenessFromLecture1DomTree.dot  LivenessFromLecture1LoopTree.dot  LivenessFromLecture2CFG.dot  LivenessFromLecture2DomTree.dot  LivenessFromLecture2LoopTree.dot  QuadrupleNestedLoopCFG.dot  QuadrupleNestedLoopDomTree.dot  QuadrupleNestedLoopLoopTree.dot  QuintupleNestedLoopCFG.dot  QuintupleNestedLoopDomTree.dot  QuintupleNestedLoopLoopTree.dot  TripleNestedLoopCFG.dot  TripleNestedLoopDomTree.dot  TripleNestedLoopLoopTree.dot
Test/LoopAnalyzer/: CMakeLists.txt  LoopAnalyzer.cpp  README.md
Test/LoopAnalyzer/Resources/: Example1DomTree.dot  Example2CFG.dot  Example2DomTree.dot  Example3DomTree.dot  Example3LoopTree.dot  Example4CFG.dot  Example5CFG.dot  Example6CFG.dot  Example6LoopTree.dot  ExampleBigLoopTree.dot
Test/PeepholesPass/: CMakeLists.txt  PeepholesPass.cpp
Test/RegisterAllocator/: CMakeLists.txt  README.md  RegisterAllocator.cpp
Test/StaticInliningPass/: CMakeLists.txt  StaticInliningPass.cpp
