cmake_minimum_required(VERSION 3.20)

add_custom_target(run_all_tests)

add_subdirectory(DominatorTree)
add_subdirectory(LoopAnalyzer)
add_subdirectory(LivenessAnalyzer)
add_subdirectory(RegisterAllocator)
add_subdirectory(PeepholesPass)
add_subdirectory(ConstantFoldingPass)
add_subdirectory(StaticInliningPass)
